--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -40,6 +40,7 @@ env:
 
 jobs:
   provision-infrastructure:
+    if: ${{ vars.ENVIRONMENT != '' }}
     runs-on: ubuntu-latest
     environment: ${{ inputs.environmentName }}
     outputs:
