--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -40,7 +40,7 @@ env:
 
 jobs:
   provision-infrastructure:
-    if: ${{ vars.ENVIRONMENT == 'staging' || vars.ENVIRONMENT == 'production' }}
+    if: ${{ vars.ENVIRONMENT == 'ctstg' || vars.ENVIRONMENT == 'ctprd' }}
     runs-on: ubuntu-latest
     environment: ${{ inputs.environmentName }}
     outputs:
