--- a/src/ContosoTraders.Api.Products/Manifests/Deployment.yaml
+++ b/src/ContosoTraders.Api.Products/Manifests/Deployment.yaml
@@ -16,8 +16,8 @@ spec:
         "kubernetes.io/os": linux
       containers:
         - name: contoso-traders-products
-          #Note: The '{ENVIRONMENT}' token will be substituted with the value of the ENVIRONMENT github variable by github workflow.
-          image: contosotradersacr{ENVIRONMENT}.azurecr.io/contosotradersapiproducts:latest
+          #Note: The '{SUFFIX}' token will be substituted with the value of the SUFFIX github variable by github workflow.
+          image: contosotradersacr{SUFFIX}.azurecr.io/contosotradersapiproducts:latest
           env:
             - name: KeyVaultEndpoint
               valueFrom:
