use https:// prefix in url for deployment env

--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: ${{ inputs.environmentName }}
-      url: ${{ steps.get-uiCdnEndpoint.outputs.uiCdnEndpoint }}
+      url: https://${{ steps.get-uiCdnEndpoint.outputs.uiCdnEndpoint }}
     outputs:
       cartsApiEndpoint: ${{ steps.get-cartsApiEndpoint.outputs.cartsApiEndpoint }}
       productsApiEndpoint: ${{ steps.get-productsApiEndpoint.outputs.productsApiEndpoint }}
