Set rg name in GHA variable and pass to IaC

--- a/.github/workflows/contoso-traders-cloud-testing-template.yml
+++ b/.github/workflows/contoso-traders-cloud-testing-template.yml
@@ -72,7 +72,7 @@ jobs:
           scope: subscription
           region: ${{ env.SUB_DEPLOYMENT_REGION }}
           template: ./iac/createResourceGroup.bicep
-          parameters: suffix=${{ vars.SUFFIX }}
+          parameters: rgName=${{ env.RESOURCE_GROUP_NAME }} suffix=${{ vars.SUFFIX }}
       # Next step is to deploy the Azure resources to the resource group `contoso-traders-rg` created above. The deployed resources
       # include storage accounts, function apps, app services cosmos db, and service bus etc.
       # The below step can also be manually executed as follows:
